# beeperclaw

./: Dockerfile  README.md  com.mihai.beeperclaw.plist  config.example.yaml  config.yaml  docker-compose.yml  opencode-access.html  phone-access.html  pyproject.toml  test-safari.html  test_docker_build.sh
docs/: ARCHITECTURE.md  remote-cli.md
src/beeperclaw/: __init__.py  bot.py  cli.py  commands.py  config.py  opencode_client.py  state.py
src/codebeep/: bot.py  commands.py  config.py  opencode_client.py  state.py
tests/: __init__.py  test_bot.py  test_commands.py  test_config.py  test_opencode_client.py  test_state.py
